# haskell-basics

./: .gitignore  CHANGELOG.md  README.md  cabal.project  columnate.cabal  flake.nix  fourmolu.yaml  haskell-basics.cabal
app/: Main.hs
doc/: slides.md
docs/: index.html
src/: MyLib.hs
src/Data/: Columnate.hs
src/Data/Columnate/: Types.hs
