cabal-version:      3.0
name:               columnate
version:            0.1.0.0
synopsis:           An sample CLI utility that formats input as a table
description:
  An introductory Haskell project. This is a command line application that formats its
  inputs into multiple columns, as a table.
homepage:           https://github.com/sgillespie/haskell-basics
license:            MIT
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
category:           Text
build-type:         Simple

common warnings
    ghc-options: -Wall
    build-depends:
      base ^>=4.18.1.0,
      text

library
    import:           warnings
    exposed-modules:
      Data.Columnate
      Data.Columnate.Types
    build-depends:
      base ^>=4.18.1.0,
    hs-source-dirs:   src
    default-language: GHC2021

executable columnate
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        columnate
    hs-source-dirs:   app
    default-language: GHC2021
