cabal-version:      3.0
name:               haskell-basics
version:            0.1.0.0
synopsis:           A simple project
description:        A simple project
homepage:           https://github.com/sgillespie/haskell-basics
license:            MIT
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
category:           Text
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Data.Columnate
      Data.Columnate.Types
    build-depends:
      base ^>=4.18.1.0,
      text
    hs-source-dirs:   src
    default-language: GHC2021

executable haskell-basics
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.1.0,
        haskell-basics

    hs-source-dirs:   app
    default-language: GHC2021

test-suite haskell-basics-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        haskell-basics
